query filter for paginator
