# library-app/internal/delivery/http/category.go
@@ -4,7 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/romaxa83/mst-app/library-app/internal/delivery/http/input"
 	"github.com/romaxa83/mst-app/library-app/internal/delivery/http/resources"
-	"github.com/romaxa83/mst-app/library-app/pkg/db"
+	"github.com/romaxa83/mst-app/library-app/pkg/logger"
 	"net/http"
 	"strconv"
 )
@@ -45,19 +45,27 @@ func (h *Handler) createCategory(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param limit query int false "limit"
+// @Param page query int false "page"
+// @Param sort query string false "sort"
+// @Param search query string false "search"
+// @Param id query int false "id"
+// @Param active query bool false "active"
+// @Param sort query int false "sort"
 // @Success 200 {object} db.Pagination
 // @Failure 400,404 {object} response
 // @Failure 500 {object} response
 // @Failure default {object} response
 // @Router /api/categories [get]
 func (h *Handler) getAllCategory(c *gin.Context) {
-	var query db.Pagination
+	var query input.GetCategoryQuery
+	//var query db.Pagination
+
 	if err := c.Bind(&query); err != nil {
 		errorResponse(c, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	//logger.Infof("%+v", query)
+	logger.Infof("%+v", query)
 
 	results, err := h.services.Category.GetAllPagination(query)
 	if err != nil {
